setting up server PORT

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,1 +1,10 @@
 {{!-- setup to be used by Handlebars --}}
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>Task Saver</title>
+	</head>
+	<body>
+		{{{ body }}}
+	</body>
+</html>
