trying to sync models and config files to post all burgers via server

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Task Saver</title>
+		<title>Burgerville</title>
 	</head>
 	<body>
 		{{{ body }}}
