--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,2 +1,22 @@
 {{!-- setup to have the template that Handlebars can render onto --}}
 {{!-- create button to submit user input to database --}}
+<h1>Burgers</h1>
+
+<h3>List</h3>
+
+<ul>
+  {{#each burgers}}
+  	<li>
+  	   <p>ID: {{this.id}}</p>
+       <p>Burger Name: {{this.burger_name}}</p>
+  	</li>
+  {{/each}}
+</ul>
+
+{{!-- <div>
+  <form action="/" method="POST">
+  	<textarea type="text" name="wish"></textarea>
+
+  	<button type="submit">Submit</button>
+  </form>
+</div> --}}
