fixing bug in orm file that inserted blank fields on post route

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,10 +13,10 @@
   {{/each}}
 </ul>
 
-{{!-- <div>
+<div>
   <form action="/" method="POST">
-  	<textarea type="text" name="wish"></textarea>
+  	<textarea type="text" name="newBurger"></textarea>
 
   	<button type="submit">Submit</button>
   </form>
-</div> --}}
+</div>
