--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,14 +4,28 @@
 
 <h3>List</h3>
 
-<ul>
-  {{#each burgers}}
-  	<li>
-  	   <p>ID: {{this.id}}</p>
-       <p>Burger Name: {{this.burger_name}}</p>
-  	</li>
-  {{/each}}
-</ul>
+<div>
+    <h4>Haven't Eaten!</h4>
+    <div id="not_eaten">
+
+        {{!-- keep undevoured items on list ONLY --}}
+        {{#each burgers}} 
+        {{#unless devoured}}
+            <form action="/{{id}}" method="POST">
+                <ul>
+                    <li>{{id}}. {{burger_name}}</li><button id="devour-button" type="submit">Eat This Burger!</button>
+                </ul>
+            </form>
+        {{/unless}} 
+        {{/each}}
+
+    </div>
+</div>
+
+    {{!-- ///////// --}}
+
+
+
 
 <div>
   <form action="/" method="POST">
@@ -20,3 +34,12 @@
   	<button type="submit">Submit</button>
   </form>
 </div>
+
+{{!-- <ul>
+  {{#each burgers}}
+  	<li>
+  	   <p>ID: {{this.id}}</p>
+       <p>Burger Name: {{this.burger_name}}</p>
+  	</li>
+  {{/each}}
+</ul> --}}
